--- a/src/components/sections/Header.css
+++ b/src/components/sections/Header.css
@@ -5,13 +5,6 @@
   padding-bottom: 1rem;
   margin-bottom: 2rem;
 }
-@media (min-width: 768px) {
-  .app__header {
-    align-items: center;
-    flex-flow: row;
-    gap: 2rem;
-  }
-}
 .app__header__avatar {
   height: 6rem;
   overflow: hidden;
@@ -46,6 +39,11 @@
   margin-left: 0.5rem;
 }
 @media (min-width: 425px) {
+  .app__header {
+    align-items: center;
+    flex-flow: row;
+    gap: 2rem;
+  }
   .app__header__details {
     flex-direction: row;
   }
